# trelby

./: .gitignore  .travis.yml  BUGS  ClipBoard.html  INSTALL  MANIFEST.in  Makefile  Makefile.install  README  README.dev  README.linux  README.md  TODO  TRANSLATION_NOTES.txt  autocompletion.py  autocompletiondlg.py  betatest.py  blyte.desktop  blyte.py  boot.py  bugreport.py  build.bat  build_mac.sh  cfg.py  cfgdlg.py  characterreport.py  charmapdlg.py  commandsdlg.py  compile_all.py  compile_all.sh  config.py  decode.py  dialoguechart.py  error.py  fileformat.txt  finddlg.py  fontinfo.py  gen_linux_dist.sh  gutil.py  headers.py  (+53 more)
choco/: trelby.nuspec
debian/: blyte.install  changelog  control  copyright  dirs  install  links  rules  trelby.install
doc/: .gitignore  Makefile  book.xml  chunk-stylesheet.xsl  fo-stylesheet.xsl  html-stylesheet-deb.xsl  html-stylesheet-mac.xsl  html-stylesheet.xsl  manual-mac.xml  manual.xml  refentry-mac.xml  refentry.xml  styles.css  version.xml
internal/: wx_problems.txt
po/: en.po  it.po  trelby.pot
resources/: quotes.txt
resources_mac/: icon.icns
src/: autocompletion.py  autocompletiondlg.py  cfgdlg.py  characterreport.py  charmapdlg.py  commandsdlg.py  config.py  dialoguechart.py  finddlg.py  gutil.py  headers.py  headersdlg.py  locationreport.py  locations.py  locationsdlg.py  misc.py  myimport.py  mypickle.py  namearray.py  namesdlg.py  opts.py  pdf.py  pml.py  reports.py  scenereport.py  screenplay.py  scriptreport.py  spellcheck.py  spellcheckcfgdlg.py  spellcheckdlg.py  splash.py  titles.py  titlesdlg.py  trelby.py  (+5 more)
(+127 files in other folders)
