[metadata]
name = trelby
version = 2.4.15
license = GPL-3.0-or-later
author = Osku Salerma
author_email = osku.salerma@gmail.com
description = Free, multiplatform, feature-rich screenwriting program
long_description = file: long_description.txt
url = https://www.trelby.org
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
packages = trelby

[options]
python_requires = >=3.9
packages = find:
install_requires =
    wxPython
    lxml
    reportlab

[options.entry_points]
console_scripts =
    trelby = trelby:trelby.main

[options.package_data]
trelby =
    dict_en.dat.gz
    fileformat.txt
    manual.html
    names.txt.gz
    sample.trelby
    resources/*
    trelby.1.gz
    locales/*/*/*

[testenv]
deps = 
    pytest

commands =
    pytest
